AC_INIT(updatedb.c)
AC_CANONICAL_SYSTEM
AC_PREFIX_DEFAULT()

AM_INIT_AUTOMAKE(nss_updatedb, 1)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL

AC_CHECK_HEADERS(nss.h)
AC_CHECK_HEADERS(dlfcn.h)
                                                                           
AC_OUTPUT(Makefile)

