AC_INIT(updatedb.c)
AC_CANONICAL_SYSTEM
AC_PREFIX_DEFAULT()

AM_INIT_AUTOMAKE(nss_updatedb, 8)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL

AC_CHECK_HEADERS(nss.h)
AC_CHECK_HEADERS(dlfcn.h)
                                                                           
AC_CHECK_HEADERS(db.h)
AC_CHECK_HEADERS(db1/db.h)
AC_CHECK_HEADERS(db3/db.h)
AC_CHECK_HEADERS(db4/db.h)
AC_CHECK_HEADERS(db_nss/db.h)

AC_CHECK_LIB(db_nss, main,[LIBS="-ldb_nss $LIBS" found_db_lib=yes],,$LIBS)
if test -z "$found_db_lib"; then
	AC_CHECK_LIB(db, main,[LIBS="-ldb $LIBS" found_db_lib=yes],,$LIBS)
fi
if test -z "$found_db_lib"; then
	AC_CHECK_LIB(db1, main,[LIBS="-ldb1 $LIBS" found_db_lib=yes],,$LIBS)
fi

AC_OUTPUT(Makefile)

